--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   google_nav_bar: ^5.0.5
   path_provider: ^2.0.2
   permission_handler: ^8.1.1
+  image_gallery_saver: ^1.6.9
+  video_player: ^2.1.6
+  chewie: ^1.2.2
+  video_thumbnail: ^0.3.3
 
 dev_dependencies:
   flutter_test:
