--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   video_player: ^2.1.6
   chewie: ^1.2.2
   video_thumbnail: ^0.3.3
+  just_audio: ^0.8.0
 
 dev_dependencies:
   flutter_test:
