--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   chewie: ^1.2.2
   video_thumbnail: ^0.3.3
   just_audio: ^0.8.0
+  google_mobile_ads: ^0.13.2
+  provider: ^5.0.0
+  share: ^2.0.4
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
