--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,11 +34,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.destinyed.video_saver"
-        minSdkVersion 16
+        applicationId "com.destinyed.statussaverpro"
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -57,4 +58,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.print:print:1.0.0'
+
+    //enable multidex
+    implementation 'com.android.support:multidex:1.0.3'
 }
