--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,18 @@ dependencies:
   image_gallery_saver: ^1.6.9
   video_player: ^2.1.6
   chewie: ^1.2.2
-  video_thumbnail: ^0.3.3
+  video_thumbnail: ^0.4.3
   # just_audio: ^0.8.0
   google_mobile_ads: ^0.13.2
   provider: ^5.0.0
   share: ^2.0.4
   url_launcher: ^6.0.9
   audioplayers: ^0.20.1
+
+  flutter_native_api:
+    git:
+      url: https://github.com/Destiny-Ed/flutter_native_api.git
+      ref: main
 
 dev_dependencies:
   flutter_test:
