--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 31
 
@@ -34,7 +36,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "app.saver"
+        applicationId "app.wsaver"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
@@ -73,4 +75,18 @@ dependencies {
 
     //enable multidex
     implementation 'com.android.support:multidex:1.0.3'
+
+    // Import the Firebase BoM
+
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
+
+
+  // Add the dependency for the Firebase SDK for Google Analytics
+
+  // When using the BoM, don't specify versions in Firebase dependencies
+
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-inappmessaging-display'
+
+
 }
