--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,11 @@ dependencies:
   share: ^2.0.4
   url_launcher: ^6.0.9
   audioplayers: ^0.20.1
-
-  flutter_native_api:
-    git:
-      url: https://github.com/Destiny-Ed/flutter_native_api.git
-      ref: main
+  
+  flutter_native_api: ^0.0.1
+  firebase_messaging: ^11.2.6
+  firebase_core: ^1.12.0
+  firebase_in_app_messaging: ^0.6.0+7
 
 dev_dependencies:
   flutter_test:
