Added android 12 support, Show recent status at the top

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.print:print:1.0.0'
 
+    implementation 'androidx.work:work-runtime-ktx:2.7.0'
+
     //enable multidex
     implementation 'com.android.support:multidex:1.0.3'
 
