--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   video_player: ^2.1.6
   chewie: ^1.2.2
   video_thumbnail: ^0.4.3
+  
   # just_audio: ^0.8.0
   google_mobile_ads: ^0.13.2
   provider: ^5.0.0
@@ -47,6 +48,7 @@ dependencies:
   firebase_messaging: ^11.2.6
   firebase_core: ^1.12.0
   firebase_in_app_messaging: ^0.6.0+7
+  thumbnails: ^1.0.1
 
 dev_dependencies:
   flutter_test:
