--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
 set(BINARY_NAME "video_saver")
-set(APPLICATION_ID "app.wsaver")
+set(APPLICATION_ID "app.save")
 
 cmake_policy(SET CMP0063 NEW)
 
